--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -13,8 +13,8 @@
     </ion-toolbar>
   </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+  <div id="container" class="center">
+    <ion-button shape="round" (click)="goToAbout()">Go to about</ion-button>
+    <ion-button shape="round" (click)="goToProducts()">Go to products</ion-button>
   </div>
 </ion-content>
